todo:
isRebootRequested : http://askubuntu.com/questions/28530/how-can-i-tell-what-package-requires-a-reboot-of-my-system
mac getIpByName liefert name von IPnum

opsi-script (4.12.18.0) unreleased; urgency=medium

 * osfunc: getOSArchitecture:
   windows: use WMI CPU Architecture together with osfunc:Is64BitSystem (OS bitness)
   to dermine the os architecture (now arm / arm64 also supported)

-- d.oertel <d.oertel@uib.de> 2025-03-24

opsi-script (4.12.17.2) unreleased; urgency=medium

 * [fix] oswebservice.pas: remove productPropertyState_getObjects used in
         GetProductPropertyList and replace it with productPropertyState_getValues (j.werner, !256)

-- j.werner <j.werner@uib.de> 13 February 2025


opsi-script (4.12.17.1) released/testing; urgency=medium

 * [fix] osfuncwin.pas: RunCommandAndCaptureOut: fix array size,
         because array starts with 0 it must be 0...ReadBuffersize-1 (j.werner, !253)
 * [fix] osjson.pas: StringListToJsonArray: fix for special chars in json (j.werner, !254)
 * [fix] oswebservice.pas: do not log product property states on lower log level than 9 during startup
         due to potential confidential content. (j.werner, !255)

-- j.werner <j.werner@uib.de> 22 January 2025


opsi-script (4.12.17.0) released; urgency=medium

 * [fix] oslog.pas, opsiscript.lpr: include cwstring, clocale (j.werner. !249)
 * [fix] osparser.pas -> execwith powershell: remove empty string from output also for StartProcess 
         and not only for RunCommandandCaptureOut, see changelog for opsi.script 4.12.16.1 (d.oertel, j.werner, !251)
 * [update] osfunc: FileGetWriteAccess: additional boolean parameter: handleDir, to fix performance problems in same cases (!252)

-- j.werner <j.werner@uib.de> 28 October 2024

opsi-script (4.12.16.1) unreleased/released (4.2/4.3); urgency=medium

* [fix] powershellcall/ExecWith powershell:
   output is at least a stringlist with one empty element instead of empty list